# localhost_pastebin

./: Cargo.toml  Dockerfile  README.md  index.html
src/: main.rs
