[package]
name = "localhost_pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"


[profile.release]
opt-level = "z"
strip = true  
lto = true
